--- a/Homework/Day_026_HW.ipynb
+++ b/Homework/Day_026_HW.ipynb
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026876871475641616\n",
-      "Gradient Boosting Reg Score : 0.7117132106303192\n"
+      "Gradient Boosting Reg Score : 0.7123397920683642\n"
      ]
     }
    ],
@@ -457,7 +457,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.027479693774541868\n",
-      "Gradient Boosting Reg Score : 0.8040231749525979\n"
+      "Gradient Boosting Reg Score : 0.8049195866659273\n"
      ]
     }
    ],
@@ -487,8 +487,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.027350385900082652\n",
-      "Gradient Boosting Reg Score : 0.8048270145210348\n"
+      "Linear Reg Score : 0.025264278092414716\n",
+      "Gradient Boosting Reg Score : 0.8004638363550829\n"
      ]
     }
    ],
@@ -498,7 +498,7 @@
     "\"\"\"\n",
     "Your Code Here, set new character at df['distance_real']\n",
     "\"\"\"\n",
-    "df['distance']=numpy.sqrt(pow(df['longitude_diff'],2)+pow(df['latitude_diff'],2))\n",
+    "df['distance_real']=numpy.sqrt(pow(df['longitude_diff']*111.320*math.cos(40.7*2*3.1415926/360),2)+pow(df['latitude_diff']*110.574,2))\n",
     "# 觀察結果 \n",
     "train_X = scaler.fit_transform(df)\n",
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
@@ -522,13 +522,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.0014280087770600636\n",
-      "Gradient Boosting Reg Score : 0.7354234771982402\n"
+      "Linear Reg Score : 0.00144642542428266\n",
+      "Gradient Boosting Reg Score : 0.7178251558855079\n"
      ]
     }
    ],
    "source": [
-    "train_X = scaler.fit_transform(df[['distance']])\n",
+    "train_X = scaler.fit_transform(df[['distance_real']])\n",
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
     "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
    ]
